add end point for getting ed25519Keypair
